@@ -198,6 +198,9 @@ local function GWUseThisLocalization()
     L["BINGSINGS_BIND"] = "bound to"
     L["MINIMAP_POS"] = "Minimap Position"
     L["MINIMAP_COORDS"] = "Coordinates"
+    L["WORLDMAP_COORDS"] = "Show Coordinates on world map"
+    L["MINIMAP_COORDS_TOGGLE"] = "Show Coordinates on Minimap"
+    L["WORLDMAP_COORDS_TOGGLE"] = "Show Coordinates on world map"
     L["WORLD_MARKER_DESC"] = "Show menu for placing world markers when in raids."
     L["UP"] = "Up"
     L["DOWN"] = "Down"
