@@ -427,7 +427,12 @@ GW_DEFAULT["AUTO_REPAIR"] = "NONE"
 GW_DEFAULT["HUD_SCALE"] = 1
 GW_DEFAULT["MINIMAP_SCALE"] = 170
 GW_DEFAULT["MINIMAP_FPS"] = false
+GW_DEFAULT["MINIMAP_COORDS"] = false
+GW_DEFAULT["MINIMAP_COORDS_TOGGLE"] = false
 GW_DEFAULT["MINIMAP_COORDS_PRECISION"] = 0
+
+GW_DEFAULT["WORLDMAP_COORDS_TOGGLE"] = false
+
 GW_DEFAULT["CASTINGBAR_DATA"] = false
 GW_DEFAULT["USE_CHARACTER_WINDOW"] = true
 GW_DEFAULT["USE_TALENT_WINDOW"] = true
