@@ -1,6 +1,7 @@
 5.5.0
 NEW
-
+    - Added options for disabling the map coordinates in both minimap and world map (Thanks, Hatdragon)
+    
 FIXES
 
 
